Add splash screen, about page, and fix test suite
- Implement native Tauri splash screen with gradient design
- Add comprehensive About page with features and tech stack
- Configure two-window system (splashscreen + main)
- Add close_splashscreen command in Rust backend
- Disable text selection and context menu globally
- Configure overlay titlebar with safe-area padding
- Fix test suite: 24/24 frontend tests passing
- Update API tests for parameter changes (lines vs limit)
- Fix getTiltState Promise handling
- Remove outdated backend test files
- Remove unused Mail import from About component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
     }
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src-tauri", "dist", ".next"],
+  "exclude": ["node_modules", "src-tauri", "dist", ".next", "src/tests", "**/*.test.ts", "**/*.test.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
