--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "typecheck": "npx tsc --noEmit",
+    "lint": "npx prettier --check 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
