--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags:
       - 'v*.*.*'
+      - 'v*.*.*-beta.*'
+      - 'v*.*.*-alpha.*'
+      - 'v*.*.*-rc.*'
 
 jobs:
   create-release:
@@ -26,22 +29,49 @@ jobs:
 
       - name: Get version from tag
         id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          
+          # Check if this is a prerelease
+          if [[ "$VERSION" =~ (alpha|beta|rc) ]]; then
+            echo "IS_PRERELEASE=true" >> $GITHUB_OUTPUT
+          else
+            echo "IS_PRERELEASE=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Generate changelog
         id: changelog
         run: |
-          # Get the previous tag
-          PREVIOUS_TAG=$(git tag --sort=-creatordate | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | sed -n '2p')
+          # Get the previous tag (same type or any previous)
+          CURRENT_TAG=${GITHUB_REF#refs/tags/}
+          
+          # Try to find previous tag of same type (stable/prerelease)
+          if [[ "${{ steps.get_version.outputs.IS_PRERELEASE }}" == "true" ]]; then
+            # For prereleases, get the previous prerelease or stable
+            PREVIOUS_TAG=$(git tag --sort=-creatordate | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+' | grep -v "^${CURRENT_TAG}$" | head -n 1)
+          else
+            # For stable releases, get the previous stable release
+            PREVIOUS_TAG=$(git tag --sort=-creatordate | grep -E '^v[0-9]+\.[0-9]+\.[0-9]+$' | grep -v "^${CURRENT_TAG}$" | head -n 1)
+          fi
           
           if [ -z "$PREVIOUS_TAG" ]; then
             echo "First release, generating full changelog"
             PREVIOUS_TAG=$(git rev-list --max-parents=0 HEAD)
           fi
           
+          echo "Generating changelog from $PREVIOUS_TAG to $CURRENT_TAG"
+          
           # Generate changelog and save to file
-          echo "## What's Changed" > changelog.md
-          echo "" >> changelog.md
+          if [[ "${{ steps.get_version.outputs.IS_PRERELEASE }}" == "true" ]]; then
+            echo "## 🚧 Pre-release - What's Changed" > changelog.md
+            echo "" >> changelog.md
+            echo "> ⚠️ This is a pre-release version for testing purposes. Please report any issues you find." >> changelog.md
+            echo "" >> changelog.md
+          else
+            echo "## What's Changed" > changelog.md
+            echo "" >> changelog.md
+          fi
           
           # Add commits grouped by type
           FEATURES=$(git log $PREVIOUS_TAG..HEAD --pretty=format:"- %s (%h)" --extended-regexp --grep="^feat" --grep="^feature")
@@ -91,24 +121,54 @@ jobs:
           - [Request a feature](https://github.com/binarygeotech/tilt-orchestrator/issues/new?template=feature_request.md)
           EOF
 
-      - name: Create release
+      - name: Create or get existing release
         id: create-release
         uses: actions/github-script@v7
         with:
           script: |
             const fs = require('fs');
             const changelog = fs.readFileSync('changelog.md', 'utf8');
+            const isPrerelease = '${{ steps.get_version.outputs.IS_PRERELEASE }}' === 'true';
+            const tag = `v${{ steps.get_version.outputs.VERSION }}`;
             
-            const { data } = await github.rest.repos.createRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              tag_name: `v${{ steps.get_version.outputs.VERSION }}`,
-              name: `Tilt Orchestrator v${{ steps.get_version.outputs.VERSION }}`,
-              body: changelog,
-              draft: true,
-              prerelease: false
-            })
-            return data.id
+            // Check if release already exists
+            try {
+              const { data: existingRelease } = await github.rest.repos.getReleaseByTag({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                tag_name: tag
+              });
+              
+              console.log(`Release already exists for tag ${tag}, using existing release ID: ${existingRelease.id}`);
+              
+              // Update the existing release with the changelog
+              await github.rest.repos.updateRelease({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                release_id: existingRelease.id,
+                body: changelog,
+                draft: true,
+                prerelease: isPrerelease
+              });
+              
+              return existingRelease.id;
+            } catch (error) {
+              if (error.status === 404) {
+                // Release doesn't exist, create a new one
+                console.log(`Creating new release for tag ${tag}`);
+                const { data } = await github.rest.repos.createRelease({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  tag_name: tag,
+                  name: `Tilt Orchestrator ${tag}${isPrerelease ? ' (Beta)' : ''}`,
+                  body: changelog,
+                  draft: true,
+                  prerelease: isPrerelease
+                });
+                return data.id;
+              }
+              throw error;
+            }
 
   build-tauri:
     needs: create-release
@@ -178,6 +238,6 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               release_id: ${{ needs.create-release.outputs.release_id }},
-              draft: false,
-              prerelease: false
+              prerelease: false,
+              draft: false
             })
