--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.4.2",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-opener": "^2.5.2",
+    "@tauri-apps/plugin-os": "^2.3.2",
+    "@tauri-apps/plugin-shell": "^2.3.3",
     "lucide-react": "^0.562.0",
     "react": "^19.1.4",
     "react-dom": "^19.1.4",
