--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,7 +27,13 @@ anyhow = "1.0"
 tokio = { version = "1", features = ["full"] }
 thiserror = "2.0.17"
 chrono = "0.4"
+tauri-plugin-os = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-shell = "2"
 
 [dev-dependencies]
 tempfile = "3.17"
 tokio-test = "0.4"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-single-instance = "2"
