--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tilt-orchestrator"
 version = "0.1.0"
-description = "A Tauri App"
+description = "Tilt Orchestrator"
 authors = ["Okojie George"]
 edition = "2021"
 
